feat: Gateway API routing, storage settings, multi-plugin support
- Add HTTPRoute creation with URL rewrite for per-session routing
- Inject PUPS_SESSION_PATH env var into tool pods for session isolation
- Add CoderAgentClaudePlugin and CoderAgentCodexPlugin variants
- Add UserParameter support for plugin-specific configuration
- Add storage size settings with MinIO integration
- Update NetworkPolicy and RBAC for cross-namespace routing
- Add session timeout and orphan pod cleanup
- Update dashboard UI with storage settings and tool selection

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>